<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LateLiao</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_send">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user">Home</string>
    <string name="homescreen">LateLiao</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_friends">Friends</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_assignment">Assignments</string>
    <string name="header">Assignment</string>
    <string name="title_details">Details</string>
    <string name="title_maps">Map</string>
    <string name="title_activity_details_fragment">DetailsFragment</string>
	<string name="add_activity_form_eventName">Event Name</string>
    <string name="add_activity_form_activityDate">Activity Date</string>
    <string name="add_activity_form_activityTime">Activity Time</string>
    <string name="add_activity_form_activityLocation">Activity Location</string>
    <string name="activityLocation_Name">Location Name</string>
    <string name="add_activity_form_friends">Friends</string>
    <string name="add_activity_form_submit">Run</string>
    <string name="add_activity_friend_dialog_positive">Enter</string>
    <string name="add_activity_friend_dialog_negative">Cancel</string>
    <string name="map_event_name">Event Name :</string>
    <string name="map_location">Location :</string>
    <string name="add_activity_run">Run</string>
    
    <string-array name="options">
        <item>Janan</item>
        <item>Add Activity</item>
        <item>Friends</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello">Hello</string>

    <dimen name="count">10dp</dimen>

    <string name="title_activity_notification">NotificationActivity</string>

    <color name="white">#FFFFFF</color>
    <color name="loginbutton">#B1EBEC</color>

    <string-array name="array01"></string-array>

    <string name="title_activity_add_event">AddEvent</string>

</resources>
