
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEvent" >
    

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/addEventActivity" >

    <EditText
        android:id="@+id/eventName"
    	android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_activity_form_eventName"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-thin"  />

    <Button
        android:id="@+id/buttonSelectDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventName"
        android:drawable="@color/white"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/add_activity_form_activityDate"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-thin"  />

    <Button
        android:id="@+id/buttonSelectTime"
        android:layout_width="fill_parent"
        android:layout_below="@id/buttonSelectDate"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/add_activity_form_activityTime"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-thin"  />
    
    <Button
        android:id="@+id/buttonSelectLocation"
        android:layout_width="fill_parent"
        android:layout_below="@id/buttonSelectTime"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/add_activity_form_activityLocation"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-thin"  />
    
    <Button
        android:id="@+id/buttonSelectFriends"
        android:layout_width="fill_parent"
        android:layout_below="@id/buttonSelectLocation"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/add_activity_form_friends"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-thin"  />
	
    <Button
        android:visibility="visible"
        android:id="@+id/addActivitySubmit"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center|center_vertical"
        android:hint="@string/add_activity_form_submit"
        android:background="@color/loginbutton"
        android:textColor="@android:color/black"
        android:text="@string/add_activity_run"
        android:fontFamily="sans-serif-light"  />
    
    <TextView
    	android:singleLine="true"
        android:id="@+id/coordinates_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSelectFriends"
        android:layout_toRightOf="@+id/coordinates_lat"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:paddingBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="8sp"
        android:textColor="@color/dark_knight"
        android:fontFamily="sans-serif-thin"  />

    <TextView
        android:id="@+id/coordinates_lat"
    	android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSelectFriends"
        android:layout_alignLeft="@+id/buttonSelectLocation"
         android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:paddingBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="8sp" 
        android:textColor="@color/dark_knight" />

</RelativeLayout>

<LinearLayout  
     android:id="@+id/drawer"
     android:layout_width="240dp"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="start" >

     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
         android:textSize="20sp"
         android:text="SideBar"
         android:textColor="@android:color/white"
         android:editable="false"
         android:background="@drawable/drawer_title_shape"
         android:fontFamily="sans-serif-thin"  />

     <ListView android:id="@+id/drawer_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
         android:divider="@color/dark_knight"
         android:dividerHeight="0.1dp"
         android:background="@color/white"
         android:fontFamily="sans-serif-thin"  />

 </LinearLayout>
 
	  
 
</android.support.v4.widget.DrawerLayout>
   