<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical" >
	
    
    <ImageView android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
     	android:src="@drawable/finalogo" />
        
   <EditText
       android:id="@+id/uName"
       android:layout_width="238dp"
       android:layout_height="30dp"
       android:paddingLeft="10dp"
       android:layout_marginLeft="25dp"
       android:layout_marginBottom="10dp"
       android:singleLine="true"
       android:background="@drawable/username"
       android:hint="@string/username" />
   
    <EditText android:id="@+id/pw"
        android:layout_width="238dp"
        android:layout_height="30dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="25dp"
        android:password="true"
        android:singleLine="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/username"
        android:hint="@string/password" />
  
   
   <Button android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="200dp"
        android:background="@drawable/login"
        android:text="@string/button_send" />
</LinearLayout>
